<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DashboardActivity">

    <View
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_md"
            android:paddingEnd="@dimen/margin_md"
            android:layout_marginBottom="@dimen/margin_lg"
            android:layout_marginTop="@dimen/margin_lg"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

        <LinearLayout
                    android:clickable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/btnAgencies"
                    app:layout_constraintStart_toEndOf="@id/btnAgencies"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginEnd="@dimen/margin_sm"
                    android:background="@drawable/background_button"
                    android:gravity="center"
                    android:layout_height="match_parent">

                <TextView
                        android:textColor="@color/text_dashboard_button"
                        android:text="@string/agencies"
                        android:layout_marginBottom="@dimen/dashboard_icon"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textSize="26sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:clickable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:id="@+id/btnAstronaut"
                    app:layout_constraintEnd_toStartOf="@id/btnAgencies"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/margin_xs"
                    android:background="@drawable/background_button"
                    android:layout_height="match_parent">

                <TextView
                        android:textColor="@color/text_dashboard_button"
                        android:layout_marginBottom="@dimen/dashboard_icon"
                        android:text="@string/astronaut"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textSize="26sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/margin_xs"
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <LinearLayout
                    app:layout_constraintEnd_toEndOf="parent"
                    android:clickable="true"
                    android:id="@+id/btnSpacecraft"
                    app:layout_constraintStart_toEndOf="@id/btnAgencies"
                    app:layout_constraintTop_toBottomOf="@id/btnAgencies"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/margin_sm"
                    android:layout_height="match_parent">

                <TextView
                        android:textColor="@color/text_dashboard_button"
                        android:layout_marginBottom="@dimen/dashboard_icon"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textSize="26sp"
                        android:text="@string/spacecraft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/margin_xs"
                    android:id="@+id/btnLauncher"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnSpacecraft"
                    app:layout_constraintTop_toBottomOf="@id/btnSpacecraft">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launcher"
                        android:layout_marginBottom="@dimen/dashboard_icon"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textColor="@color/text_dashboard_button"
                        android:textSize="26sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/margin_xs"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <LinearLayout
                    android:id="@+id/btnLaunch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/margin_sm"
                    android:layout_weight="1"
                    android:background="@drawable/background_button"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dashboard_icon"
                        android:fontFamily="sans-serif-condensed-light"
                        android:text="@string/launch"
                        android:textColor="@color/text_dashboard_button"
                        android:textSize="26sp" />


            </LinearLayout>


            <LinearLayout
                    android:id="@+id/btnEvent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:clickable="true"
                    app:layout_constraintStart_toEndOf="@id/btnLaunch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/margin_xs"
                    android:layout_marginEnd="@dimen/margin_xs"
                    android:background="@drawable/background_button"
                    android:layout_height="match_parent">


                <TextView
                        android:textColor="@color/text_dashboard_button"
                        android:layout_marginBottom="@dimen/dashboard_icon"
                        android:text="@string/event"
                        android:fontFamily="sans-serif-condensed-light"
                        android:textSize="26sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>